Fix findbugs by being explicit about the findbugs version. This should prevent breakage in the future by avoiding automatic usage of a later version.
Also changed up the gradle options to work better under Java 8.

Upgraded to the most current gradle.